<?xml version="1.0"?>
<package format="2">
  <name>zed_cam</name>
  <version>0.0.1</version>
  <description>ROS package to work with ZED camera without GPU using OpenCV as standard uvc camera</description>

  <maintainer email="muhammad.humais@ku.ac.ae">M Ahmed Humais</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/zed_uvc_nodelet.xml" />
  </export>
</package>
